--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>	
 <link rel="stylesheet" href="style.css">
@@ -7,11 +6,12 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<title>Car Racing Game</title>
 </head>
-<body>
+<body onload="add();">
 <center>
 <h1 id="race">Car Racing</h1>
 <h1 id="status">Game Status : <span id="game_status"></span></h1>
-<canvas id="myCanvas" width="800" height="600"></canvas>
+<canvas id="myCanvas" width="800" height="600">
+</canvas>
 <h4>
 	<b class="text-danger">NOTE : </b> IF THE CARS ARE NOT VISIABLE PRESS ANY ARROW KEY
 </h4>
